--- a/configserver-dev.properties
+++ b/configserver-dev.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=dev
 spring.application.name=configserver
 server.port=8881
-eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
